feat-stores: get-update store profile based on logged user
